# habbit-trackit-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  .env.test.example  pyproject.toml  pytest.ini  requirements.txt
backend/migrations/: env.py
backend/src/: main.py  schemas.py
backend/src/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logger.py
backend/tests/: conftest.py
